chore: ui polishing, make sure we use brand color and alignments

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,7 @@
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.589 0.232 282.69);
+  --primary: oklch(46.54% 0.196 323.50);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -53,7 +53,7 @@
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.589 0.232 282.69);
+  --primary: oklch(46.54% 0.196 323.50);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
